browser-extension/crates/core/tests/snapshots/approved_test__chunker_approved@no_boundaries.input.txt.snap
---
source: crates/core/tests/approved_test.rs
expression: chunks
input_file: crates/core/tests/testdata/text/no_boundaries.input.txt
---
[
  "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
]
