browser-extension/crates/core/tests/snapshots/approved_test__chunker_approved@short_text.input.txt.snap
---
source: crates/core/tests/approved_test.rs
expression: chunks
input_file: crates/core/tests/testdata/text/short_text.input.txt
---
[
  "Short text."
]
