browser-extension/crates/core/tests/snapshots/approved_test__chunker_approved@standard_sentences.input.txt.snap
---
source: crates/core/tests/approved_test.rs
expression: chunks
input_file: crates/core/tests/testdata/text/standard_sentences.input.txt
---
[
  "This is the first sentence. It should be split here.",
  "This is the second sentence, and it has a comma! \nWhat about a question mark? Yes, that works too.",
  "This sentence is extremely long and will probably hit the max character limit before it actually",
  "reaches a proper punctuation mark, forcing the chunker to split on a space instead of a",
  "punctuation mark."
]
