browser-extension/crates/core/tests/snapshots/approved_test__chunker_approved@unicode_multibyte.input.txt.snap
---
source: crates/core/tests/approved_test.rs
expression: chunks
input_file: crates/core/tests/testdata/text/unicode_multibyte.input.txt
---
[
  "あああああああああああああああああああああああああああああああああ",
  "あああああああああああああああああああああああああああああああああ",
  "あああああああああああああああああああああああああああああああああ",
  "あ"
]
