browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@aria_hidden.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/aria_hidden.input.html
---
{
  "title": "Aria Hidden",
  "sections": [
    {
      "kind": "paragraph",
      "text": "This text should be extracted.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "A normal paragraph",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
