browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@aria_roles.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/aria_roles.input.html
---
{
  "title": "",
  "sections": [
    {
      "kind": "heading",
      "text": "Main Content",
      "depth": 1,
      "selector": "h1"
    },
    {
      "kind": "paragraph",
      "text": "This is the main content area identified by ARIA role.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "table",
      "text": "| Name | Value |\n|---|---|\n| Foo | 42 |\n| Bar | 99 |",
      "depth": null,
      "selector": "div"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
