browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@dedup_adjacent.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/dedup_adjacent.input.html
---
{
  "title": "",
  "sections": [
    {
      "kind": "paragraph",
      "text": "Same text here",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Different text",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Also unique",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
