browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@definition_list.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/definition_list.input.html
---
{
  "title": "",
  "sections": [
    {
      "kind": "heading",
      "text": "Glossary",
      "depth": 2,
      "selector": "h2"
    },
    {
      "kind": "list",
      "text": "**HTML**: HyperText Markup Language\n**CSS**: Cascading Style Sheets\n**JS**: JavaScript",
      "depth": null,
      "selector": "dl"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
