browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@details_summary.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/details_summary.input.html
---
{
  "title": "",
  "sections": [
    {
      "kind": "heading",
      "text": "FAQ",
      "depth": 1,
      "selector": "h1"
    },
    {
      "kind": "paragraph",
      "text": "Mairu is a context and memory storage system for coding agents.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "It uses hybrid retrieval with vector and full-text search.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Contact us for more information.",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
